changes in style properties

--- a/myProject/index.html
+++ b/myProject/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1100">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <script src="pages/main/mainPage.js"></script>
     <script src="pages/game/gamePage.js"></script>
     <script src="pages/score/scorePage.js"></script>
@@ -14,82 +15,15 @@
     <link href="pages/game/gamePageStyle.css" rel="stylesheet">
     <link href="pages/score/scorePageStyle.css" rel="stylesheet">
     <title>Application</title>
-    <style>
-        .app {
-            overflow: hidden;
-            /* Отображается только область внутри элемента, остальное будет скрыто. */
-            position: absolute;
-            width: 100%;
-            padding-bottom: 50%;
-            height: 100%;
-            background: url(clouds/squares_glow_blue.png);
-            background-size: 40%;
-            /*масштабирование фона */
-            background-position: 0px 13px;
-        }
-
-        #content {
-            position: relative;
-            z-index: 1;
-        }
-
-
-        .app img {
-            width: 100%;
-            left: 0;
-            top: 0;
-            position: absolute;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-            pointer-events: none;
-        }
-
-        @keyframes animCloud {
-            from {
-                transform: translateX(100%);
-            }
-
-            to {
-                transform: translateX(-100%);
-            }
-        }
-
-        .cloud1 {
-            animation: animCloud 30s infinite linear;
-        }
-
-        .cloud2 {
-            animation: animCloud 40s infinite linear;
-        }
-
-        .cloud3 {
-            animation: animCloud 60s infinite linear;
-        }
-
-        .cloud4 {
-            animation: animCloud 80s infinite linear;
-        }
-
-        /* #app {
-            /* position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color:grey; 
-        } */
-    </style>
 </head>
 
 <body>
     <div class="app">
         <div id="content"></div>
-        <img src="clouds/cloud-01.png" class="cloud1" alt="">
-        <img src="clouds/cloud-02.png" class="cloud2" alt="">
-        <img src="clouds/cloud-03.png" class="cloud3" alt="">
-        <img src="clouds/cloud-04.png" class="cloud4" alt="">
+        <img src="./pages/main/clouds/cloud-01.png" class="cloud1" alt="">
+        <img src="./pages/main/clouds/cloud-02.png" class="cloud2" alt="">
+        <img src="./pages/main/clouds/cloud-03.png" class="cloud3" alt="">
+        <img src="./pages/main/clouds/cloud-04.png" class="cloud4" alt="">
 
     </div>
     <script>
