--- a/myProject/index.html
+++ b/myProject/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=1100">
+    <meta name="viewport" content="width=device-width">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <script src="pages/main/mainPage.js"></script>
     <script src="pages/game/gamePage.js"></script>
