--- a/myProject/index.html
+++ b/myProject/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+    <!-- <meta name="viewport" content="height=device-height"> -->
+    <!-- <meta name="viewport" content="width=device-width"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <script src="pages/main/mainPage.js"></script>
     <script src="pages/game/gamePage.js"></script>
