--- a/myProject/index.html
+++ b/myProject/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
-    <!-- <meta name="viewport" content="height=device-height"> -->
-    <!-- <meta name="viewport" content="width=device-width"> -->
+    <meta name="viewport" content="width=device-width">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <script src="pages/main/mainPage.js"></script>
     <script src="pages/game/gamePage.js"></script>
     <script src="pages/score/scorePage.js"></script>
+    <script src="pages/rule/rulePage.js"></script>
+    <script src="pages/about/aboutPage.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="pages/main/mainPageStyle.css" rel="stylesheet">
@@ -51,6 +51,16 @@
             location.hash = { pagename: 'Records' }.pagename;
         }
 
+        function switchToRulesPage() {
+            clickAudio.play()
+            location.hash = { pagename: 'Rules' }.pagename;
+        }
+
+        function switchToAboutPage() {
+            clickAudio.play()
+            location.hash = { pagename: 'About' }.pagename;
+        }
+
         let SPAState = {}
 
         function switchToStateFromURLHash() {
@@ -61,6 +71,10 @@
                 SPAState = { pagename: 'Game' }
             } else if (stateStr === 'Records') {
                 SPAState = { pagename: 'Records' }
+            } else if (stateStr === 'Rules') {
+                SPAState = { pagename: 'Rules' }
+            } else if (stateStr === 'About') {
+                SPAState = { pagename: 'About' }
             } else (SPAState = { pagename: 'Main' })
 
 
@@ -74,6 +88,12 @@
                     break;
                 case 'Records':
                     recordsPageLoading();
+                    break;
+                case 'Rules':
+                    pageHTML += rulesPageLoading();
+                    break;
+                case 'About':
+                    pageHTML += aboutPageLoading();
                     break;
             }
 
