--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     <br>
     <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/myProject/index.html">myProject</a>
     <br>
+    <a href = "https://maryiatatarevich.github.io/Masha-Tatarevich/CreditCardForm/CreditCardForm.html">CreditCardForm</a>
+    <br>
 
 </hr>
 </body>
