--- a/CreditCardForm/CreditCardForm.html
+++ b/CreditCardForm/CreditCardForm.html
@@ -17,7 +17,7 @@
             box-sizing: border-box;
             position: absolute;
             width: 360px;
-            height: 596px;
+            height: 596px; 
             background-color: #FFFFFF;
             left: 50%;
             top: 50%;
@@ -31,7 +31,6 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            width: 300px;
             height: 92px;
         }
 
@@ -134,6 +133,32 @@
             color: transparent;
         }
 
+        @media (max-width: 400px) {
+            form {
+                width: 290px;
+                height: 529px; 
+                padding: 16px 20px 20px;
+            }
+
+            li {
+                display: inline-block;
+                box-sizing: border-box;
+                width: 250px;
+                height: 65px;
+                margin-top: 15px;
+            }
+
+            ul li:nth-child(3) {
+                width: 119px;
+                float: left;
+            }
+
+            ul li:nth-child(4) {
+                width: 119px;
+                float: right;
+            }
+
+        }
     </style>
 </head>
 
