--- a/CreditCardForm/CreditCardForm.html
+++ b/CreditCardForm/CreditCardForm.html
@@ -17,7 +17,6 @@
             box-sizing: border-box;
             position: absolute;
             width: 360px;
-            height: 596px; 
             background-color: #FFFFFF;
             left: 50%;
             top: 50%;
@@ -115,6 +114,7 @@
             font-size: 12px;
             line-height: 14px;
             margin-top: 8px;
+            margin-bottom: 0px;
         }
 
         #ccn {
@@ -136,7 +136,6 @@
         @media (max-width: 400px) {
             form {
                 width: 290px;
-                height: 529px; 
                 padding: 16px 20px 20px;
             }
 
@@ -158,6 +157,20 @@
                 float: right;
             }
 
+            #ccn {   
+                background-position: 224.58px center;
+            }
+
+            #cvv {
+                background-position: 94.17px center;
+            }
+        }
+
+        /* убрать стрелки */
+        input[type="number"]::-webkit-outer-spin-button,
+        input[type="number"]::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
         }
     </style>
 </head>
@@ -230,7 +243,6 @@
         }
         function formatExpDate() {
             let expDate = this.value.replace(/[^\d]/g, '').substr(0, 4);
-            // expDate = expDate != '' ? expDate.match(/.{1,2}/g).join('/') : '';
             expDate = expDate != '' ? expDate.match(/.{1,2}/g).join('/') : '';
             this.value = expDate;
         }
@@ -309,7 +321,5 @@
         }
 
     </script>
-
 </body>
-
 </html>
